Second working version

--- a/firstTry.cfg
+++ b/firstTry.cfg
@@ -1,20 +1,40 @@
 [general]
-finalImage.resolution = 1000x1500
-image.default.resolutionLong = 300
-image.default.resolutionShort = 200
+finalImage.resolution = 2000x3000
+finalImage.font = /usr/share/fonts/truetype/thai/Purisa.ttf
+finalImage.fontSize = 35
+# Integrate in a 3/2 ratio
+image.default.resolutionLong = 1350
+image.default.resolutionShort = 900
+
 
 #[layout-<name>]
 #photo-n = <orientation : h|v>, imagePosition, textPosition (, size=defaultSize)
 
 [layout-1]
-photo.0 = h, 10x10,  10x210
-photo.1 = h, 10x220, 10x440
-photo.2 = h, 10x460,  10x670
-
-[layout-3]
-photo.0 = v, 10x10,  10x310
-photo.1 = h, 10x340, 10x550
+photo.0 = h, 400x10,   400x930
+photo.1 = h, 400x1010, 400x1930
+photo.2 = h, 400x2010, 400x2930
 
 [layout-2]
-photo.0 = v, 10x10,  10x210
-photo.1 = v, 10x250, 10x210
+photo.0 = v, 300x10,   1400x50
+photo.1 = v, 800x1510, 400x1530
+
+[layout-3]
+photo.0 = h, 400x560,   400x1450
+photo.1 = h, 400x1560,  400x2500
+
+[layout-4]
+photo.0 = h, 400x560,   400x1450
+photo.1 = v, 800x1510, 400x1530
+
+[layout-5]
+photo.0 = v, 300x10,   1400x50
+photo.1 = h, 400x1560,  400x2500
+
+[layout-6]
+photo.0 = h, 400x560,   400x1450
+
+[layout-7]
+photo.0 = v, 300x10,   1400x50
+
+
