Add index color bookmark, better logging (with colors)

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -6,6 +6,13 @@ finalImage.fontSize = 35
 image.default.resolutionLong = 1890
 image.default.resolutionShort = 1260
 
+index.bookmark.size = 200x160
+index.bookmark.font = /usr/share/fonts/truetype/thai/Purisa.ttf
+index.bookmark.fontSize = 35
+
+#index.colors = F5C99D, B5D588, 8890AC, F3822A, BE90B3
+index.colors = b9a2ce, db90b1, f8a587, f9bb7e, fed676, fff669, e0e98c, 6acc9b, 67cfec, 9997c8
+#a37fbc, d27ca3, f37c7e, fabe80
 
 #[layout-<name>]
 #photo-n = <orientation : h|v>, imagePosition, textPosition (, size=defaultSize)
