Add centering text modes

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -10,9 +10,7 @@ index.bookmark.size = 200x160
 index.bookmark.font = /usr/share/fonts/truetype/thai/Purisa.ttf
 index.bookmark.fontSize = 55
 
-#index.colors = F5C99D, B5D588, 8890AC, F3822A, BE90B3
 index.colors = b9a2ce, db90b1, f8a587, f9bb7e, fed676, fff669, e0e98c, 6acc9b, 67cfec, 9997c8
-#a37fbc, d27ca3, f37c7e, fabe80
 
 #[layout-<name>]
 #photo-n = <orientation : h|v>, imagePosition, textPosition (, size=defaultSize)
@@ -24,7 +22,7 @@ photo.2 = h, 560x2830, auto
 
 [layout-2]
 photo.0 = v, 420x150,    1800x350+2400x600
-photo.1 = v, 1120x2200, 420x2400+1020x2800
+photo.1 = v, 1120x2200,  420x2400+1020x2800
 
 [layout-3]
 photo.0 = h, 560x500,   auto
@@ -42,6 +40,6 @@ photo.1 = h, 560x2600,  auto
 photo.0 = h, 560x560,   auto
 
 [layout-7]
-photo.0 = v, 760x560,   860x2500+1920x2800
+photo.0 = v, 760x560,   760x2500+2020x2800+center
 
 
