Add index rendering, background color

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -2,9 +2,12 @@
 finalImage.resolution = 2800x4200
 finalImage.font = /usr/share/fonts/truetype/thai/Purisa.ttf
 finalImage.fontSize = 35
+finalImage.backgroundColor = ffffe2
+
 # Integrate in a 3/2 ratio
 image.default.resolutionLong = 1890
 image.default.resolutionShort = 1260
+
 
 index.bookmark.size = 200x160
 index.bookmark.font = /usr/share/fonts/truetype/thai/Purisa.ttf
