Move index.bookmark.maxLength to property

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -12,6 +12,7 @@ image.default.resolutionShort = 1260
 index.bookmark.size = 200x160
 index.bookmark.font = /usr/share/fonts/truetype/thai/Purisa.ttf
 index.bookmark.fontSize = 55
+index.bookmark.maxLength = 1950
 
 index.colors = b9a2ce, db90b1, f8a587, f9bb7e, fed676, fff669, e0e98c, 6acc9b, 67cfec, 9997c8
 
