Add text page feature + pano

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -46,4 +46,7 @@ photo.0 = h, 560x560,   auto
 [layout-7]
 photo.0 = v, 760x560,   760x2500+2020x2800+center
 
+[layout-8]
+photo.0 = h, 560x250,   text
+
 
